# LORA_master_integrate

DAQ_test.xcodeproj/: project.pbxproj
DAQ_test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lora_daq-master/: CMakeLists.txt  README.md
lora_daq-master/daq_managers/: daq_execution_status_file.txt  start_stations.sh  start_stations_v2.sh  stop_lora.sh  the_puppeteer.sh
lora_daq-master/electronics_calib/: 20191117_1332_calib_control_params.txt  20191119_1623_calib_control_params.txt
lora_daq-master/include/: Buffer.h  LOFAR_Communications.h  LORA_STATION.h  LORA_STATION_V1.h  LORA_STATION_V2.h  OPERATIONS.h  Socket_Calls.h  Structs.h  functions_library.h
lora_daq-master/input/: 20191115_2114_init_control_params_calib_ch1.txt  20191115_2114_init_control_params_calib_ch2.txt  20191115_2114_init_control_params_calib_ch3.txt  20191115_2114_init_control_params_calib_ch4.txt  backup_init_control_params_11_17_2019.txt  backup_init_control_params_11_27_2019.txt  backup_init_control_params_12_07_2019.txt  detector_config.txt  detector_config_calib_lasa1.txt  detector_config_calib_lasa2.txt  detector_config_calib_lasa3.txt  detector_config_calib_lasa4.txt  detector_config_calib_lasa5.txt  detector_config_elec_calib.txt  detector_coord.txt  fake_network_config.txt  init_control_params.txt  init_control_params_V2_det.txt  init_control_params_V2_stn.txt  init_control_params_muon_calib_ch1.txt  init_control_params_muon_calib_ch1_backup_27nov.txt  init_control_params_muon_calib_ch2.txt  init_control_params_muon_calib_ch2_backup_27nov.txt  init_control_params_muon_calib_ch3.txt  init_control_params_muon_calib_ch3_backup_27_nov.txt  init_control_params_muon_calib_ch4.txt  init_control_params_muon_calib_ch4_backup_27nov.txt  network_config.txt
lora_daq-master/monitoring/: continuous_git_pull.sh  dashboard.py  deploy_dash_app.sh  rsync_with_lofarcr.sh  vub_logo.eps
lora_daq-master/src/: Buffer.cxx  LOFAR_Communications.cxx  LORA_STATION.cxx  LORA_STATION_V1.cxx  LORA_STATION_V2 copy.cp  LORA_STATION_V2.cxx  OPERATIONS.cxx  Socket_Calls.cxx  Structs.cxx  functions_library.cxx  main.cxx  main_elec_calib.cxx  main_muon_calib.cxx
lora_daq-master/test/: CMakeLists.txt  bkupCMakeLists.txt  check_boost_library.cxx  min_working_threading_example.cxx  old_Socket_Calls.cxx  old_Socket_Calls.h  read_txt_file.cxx  test_address_of_noninit_vector.cxx  test_boost_circ_buff.cxx  test_file.txt  test_socket_calls_client.cxx  test_socket_calls_client_try_fail.cxx  test_socket_calls_client_v2.cxx  test_socket_calls_server.cxx
